--- a/Assets/Scripts/Lib/UnityXFrameLib.asmdef
+++ b/Assets/Scripts/Lib/UnityXFrameLib.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "Hotfix",
+    "name": "UnityXFrameLib",
     "rootNamespace": "",
     "references": [
         "GUID:60c0d8d9b7a5d84469add73ca17a4e42"
@@ -10,9 +10,7 @@
     "overrideReferences": false,
     "precompiledReferences": [],
     "autoReferenced": true,
-    "defineConstraints": [
-        "HOTFIX_EDITOR"
-    ],
+    "defineConstraints": [],
     "versionDefines": [],
     "noEngineReferences": false
 }
