--- a/Assets/Scripts/Lib/UnityXFrameLib.asmdef
+++ b/Assets/Scripts/Lib/UnityXFrameLib.asmdef
@@ -2,7 +2,8 @@
     "name": "UnityXFrameLib",
     "rootNamespace": "",
     "references": [
-        "GUID:60c0d8d9b7a5d84469add73ca17a4e42"
+        "GUID:60c0d8d9b7a5d84469add73ca17a4e42",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
