--- a/Assets/UnityXFrame/Lib/UnityXFrameLib.asmdef
+++ b/Assets/UnityXFrame/Lib/UnityXFrameLib.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "UnityXFrameLib",
+    "name": "UnityXFrame.Lib",
     "rootNamespace": "",
     "references": [
         "GUID:60c0d8d9b7a5d84469add73ca17a4e42",
