--- a/Assets/UnityXFrame/Editor/UnityXFrame.Editor.asmdef
+++ b/Assets/UnityXFrame/Editor/UnityXFrame.Editor.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:60c0d8d9b7a5d84469add73ca17a4e42",
-        "GUID:69448af7b92c7f342b298e06a37122aa"
+        "GUID:69448af7b92c7f342b298e06a37122aa",
+        "GUID:9e24947de15b9834991c9d8411ea37cf"
     ],
     "includePlatforms": [
         "Editor"
