--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,6 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 Assets/UnityXFrame/Editor/UserfulToolData.asset
 Assets/UnityXFrame/Editor/UserfulToolData.asset.meta
+Assets/AddressableAssetsData/WebGL.meta
+ServerData/WebGL/catalog_2024.01.28.14.40.30.hash
+ServerData/WebGL/catalog_2024.01.28.14.40.30.json
